@@ -8,7 +8,7 @@
  *
  * Caveats: None
  *
- * $Id: JOINCommand.cc,v 1.4 2003-10-11 15:24:55 jeekay Exp $
+ * $Id: JOINCommand.cc,v 1.5 2003-10-31 19:23:56 jeekay Exp $
  */
 
 
@@ -21,7 +21,7 @@
 #include	"responses.h"
 #include	"Network.h"
 
-const char JOINCommand_cc_rcsId[] = "$Id: JOINCommand.cc,v 1.4 2003-10-11 15:24:55 jeekay Exp $" ;
+const char JOINCommand_cc_rcsId[] = "$Id: JOINCommand.cc,v 1.5 2003-10-31 19:23:56 jeekay Exp $" ;
 
 namespace gnuworld
 {
@@ -95,6 +95,8 @@ bot->writeChannelLog(theChan, theClient, sqlChannel::EV_JOIN, "");
 
 theChan->setInChan(true);
 theChan->removeFlag(sqlChannel::F_IDLE);
+theChan->setFlag(sqlChannel::F_AUTOJOIN);
+theChan->commit();
 bot->getUplink()->RegisterChannelEvent( theChan->getName(), bot);
 bot->Join(theChan->getName(),
 	"",
