@@ -3,7 +3,8 @@
 * Respect sql_pass if given
 * Added INVISIBLE to list of flags shown for users
 * Added IDLE flag for channels that have been autoparted
-* Check we are opped before issuing modes.
+* Check we are opped before issuing modes
+* If we join a channel, set AUTOJOIN
 * Bumped version to 1.2.12
 
 2003-10-02 1.2.11 Jeekay
